<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView_personaje"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/txt_nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.773"
            app:srcCompat="@drawable/fresa" />

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginBottom="84dp"
            android:autofillHints=""
            android:background="@drawable/fondoet"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName"
            android:maxLength="6"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginBottom="104dp"
            android:background="@drawable/fondoboton"
            android:onClick="Jugar"
            android:text="@string/btn"
            android:textColor="@android:color/background_light"
            android:textColorHint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView_bestScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView_bestScore"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/fondoet"
            android:gravity="center"
            android:text="@string/textView_bestScore"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>